--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,52 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Motorvognregister</title>
-  <link rel="stylesheet" href="Style.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+    <link rel="stylesheet" href="index.css">
 </head>
-<body onload="formaterData()">
-  <h1>Motorvognregister</h1>
-  <form>
-    <div id="tre">
-      <div class="inputBox">
-      <label for="persNum">Eiers personnummer: </label><br>
-      <input type="text" id="persNum" name="persNum" placeholder="000000 00000">
-      </div>
+<body>
+<form id="registrering" action="javascript:registerVehicle();">
+    <label for="pnummer">Personnummer</label>
+    <input id="pnummer" type="text">
 
-      <div class="inputBox">
-      <label for="navn">Eiers navn: </label><br>
-      <input type="text" id="navn" name="navn" placeholder="Jane Doe">
-      </div>
+    <label for="navn">Navn</label>
+    <input id="navn" type="text">
 
-      <div class="inputBox">
-      <label for="adresse">Eiers adresse: </label><br>
-      <input type="text" id="adresse" name="adresse" placeholder="Osloveien 5 ,0370 Oslo">
-      </div>
-    </div>
+    <label for="adresse">Adresse</label>
+    <input id="adresse" type="text">
 
-    <div id="seks">
-      <div class="inputBox">
-      <label for="kjennetegn">Kjennetegn: </label><br>
-      <input type="text" id="kjennetegn" name="kjennetegn" placeholder="DR23523">
-      </div>
+    <label for="kjennetegn">Kjennetegn</label>
+    <input id="kjennetegn" type="text">
 
-      <div class="inputBox">
-      <label for="bilmerke">Bilmerke: </label><br>
-      <input type="text" id="bilmerke" name="bilmerke" placeholder="Skoda">
-      </div>
+    <label for="bilmerke">Bilmerke</label>
+    <input id="bilmerke" type="text">
 
-      <div class="inputBox">
-      <label for="biltype">Biltype: </label><br>
-      <input type="text" id="biltype" name="biltype" placeholder="Octavia">
-      </div>
-    </div>
-  </form>
-  <button onclick="regBil()">Registrer</button>
-  <h2>Alle bilene: </h2>
-  <div id="bilene"></div>
-  <button onclick="slettAlle()">Slett alle</button>
-  <script src="motorvogn.js"></script>
+    <label for="biltype">Biltype</label>
+    <input id="biltype" type="text">
+
+    <button type="submit" onclick="getBiler()" >Send inn</button>
+</form>
+
+
+<table id="outputTable">
+    <tr>
+        <th>Personnummer</th>
+        <th>Navn</th>
+        <th>Adresse</th>
+        <th>Kjennetegn</th>
+        <th>Bilmerke</th>
+        <th>Biltype</th>
+    </tr>
+</table>
+
+<script src="index.js"></script>
 </body>
 </html>
