--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,19 +12,19 @@
     <input id="pnummer" type="text">
 
     <label for="navn">Navn</label>
-    <input id="navn" type="text">
+    <input id="navn" type="text" placeholder="Jimmy Antonio">
 
     <label for="adresse">Adresse</label>
-    <input id="adresse" type="text">
+    <input id="adresse" type="text" placeholder="Pilestredet 60">
 
     <label for="kjennetegn">Kjennetegn</label>
-    <input id="kjennetegn" type="text">
+    <input id="kjennetegn" type="text" placeholder="DR38192">
 
     <label for="bilmerke">Bilmerke</label>
-    <input id="bilmerke" type="text">
+    <input id="bilmerke" type="text" placeholder="Mercedes">
 
     <label for="biltype">Biltype</label>
-    <input id="biltype" type="text">
+    <input id="biltype" type="text" placeholder="C class Amg">
 
     <button type="submit" onclick="getBiler()" >Send inn</button>
 </form>
