Placeholder med personnummer

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,7 +9,7 @@
 <body>
 <form id="registrering" action="javascript:registerVehicle();">
     <label for="pnummer">Personnummer</label>
-    <input id="pnummer" type="text">
+    <input id="pnummer" type="text" placeholder="12038482716">
 
     <label for="navn">Navn</label>
     <input id="navn" type="text" placeholder="Jimmy Antonio">
